tests/ansible.yml
---
# simple ansible playbook

- name: "Configure webserver"
  hosts: "webservers"

  tasks:

    - name: "Install httpd"
      ansible.builtin.package:
        name: "httpd"
        state: "present"
      become: true

    - name: "Start httpd"
      ansible.builtin.service:
        name: "httpd"
        state: "started"
      become: true

    - name: "Configure httpd"
      ansible.builtin.template:
        src: "{{ item.src }}"
        dest: "{{ item.dest }}"
        owner: "{{ item.owner }}"
        group: "{{ item.group }}"
        mode: "{{ item.mode }}"
        backup: "{{ item.backup }}"
        validate: "{{ item.validate }}"
      become: true
  
    - name: "Restart httpd"
      ansible.builtin.service:
        name: "httpd"
        state: "restarted"
      become: true

...
